@@ -701,24 +701,10 @@
                     <property name="text">
                      <string>Intensity overflow in color: </string>
                     </property>
-                    <property name="buddy">
-                     <cstring>overflowColorCheckBox</cstring>
-                    </property>
                    </widget>
                   </item>
                   <item row="4" column="1">
-                   <layout class="QHBoxLayout" name="overflowColorHorizontalLayout">
-                    <item>
-                     <widget class="QCheckBox" name="overflowColorCheckBox">
-                      <property name="toolTip">
-                       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If selected the intensity overflow is plotted in color&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                      </property>
-                      <property name="text">
-                       <string/>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
+                   <layout class="QHBoxLayout" name="overflowColorHorizontalLayout" />
                   </item>
                  </layout>
                 </item>
@@ -2325,7 +2311,6 @@ in the file name and the file directory for Tango File Source</string>
   <tabstop>nanmaskCheckBox</tabstop>
   <tabstop>negmaskCheckBox</tabstop>
   <tabstop>zeromaskCheckBox</tabstop>
-  <tabstop>overflowColorCheckBox</tabstop>
   <tabstop>keepCoordsCheckBox</tabstop>
   <tabstop>lazyimageCheckBox</tabstop>
   <tabstop>aspectlockedCheckBox</tabstop>
