@@ -1,5 +1,6 @@
 2022-12-XX Jan Kotanski <jan.kotanski@desy.de>
 	* fix for crashing config dialog in python 3.10
+	* remove overflowColorCheckBox from the configuration
 	* tagged as 2.80.1
 
 2022-12-20 Jan Kotanski <jan.kotanski@desy.de>
